--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ dependencies {
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.dbunit:dbunit:2.6.0'
+	testImplementation 'com.github.springtestdbunit:spring-test-dbunit:1.3.0'
 }
 
 test {
