--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,6 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type.descriptor.sql=trace
+spring.jwt.secret=12345678901234567890123456789012
 
 
