--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
+# JPA
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# logging
 logging.level.org.hibernate.type.descriptor.sql=trace
+
+# security
 spring.jwt.secret=12345678901234567890123456789012
+server.error.whitelabel.enabled=false
 
 
