--- a/deployment/deployment-dev.yml
+++ b/deployment/deployment-dev.yml
@@ -8,12 +8,12 @@ spec:
     - port: 8081
       targetPort: 8080
   selector:
-    app: tutorial-api
+    app: mureng-app-dev
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mureng-app-dev
+  name: mureng-app-dev-deployment
 spec:
   replicas: 1
   selector:
