--- a/build.gradle
+++ b/build.gradle
@@ -35,9 +35,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.dbunit:dbunit:2.6.0'
 	testImplementation 'com.github.springtestdbunit:spring-test-dbunit:1.3.0'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.liquibase:liquibase-core:4.3.5'
 	implementation 'mysql:mysql-connector-java'
+	implementation 'org.springframework.security:spring-security-test'
 }
 
 test {
