--- a/deployment/deployment-dev.yml
+++ b/deployment/deployment-dev.yml
@@ -15,7 +15,7 @@ kind: Deployment
 metadata:
   name: mureng-app-dev-deployment
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: mureng-app-dev
@@ -30,24 +30,20 @@ spec:
           resources:
             requests:
               memory: "256Mi"
-              cpu: "300m"
+              cpu: "500m"
             limits:
               memory: "512Mi"
-              cpu: "500m"
+              cpu: "600m"
           ports:
             - containerPort: 8080
-#          env:
-#            - name: NODE_ENV
-#              value: "production"
-#            - name: PORT
-#              value: "$PORT"
-#            - name: DB_NAME
-#              value: "$DB_NAME"
-#            - name: DB_USERNAME
-#              value: "$DB_USERNAME"
-#            - name: DB_PASSWORD
-#              value: "$DB_PASSWORD"
-#            - name: DB_HOST
-#              value: "$DB_HOST"
-#            - name: DB_PORT
-#              value: "$DB_PORT"
+          env:
+            - name: SPRING_PROFILES_ACTIVE
+              value: "dev"
+            - name: SPRING_DATASOURCE_DRIVER_CLASS_NAME
+              value: "$DEV_DB_DRIVER"
+            - name: SPRING_DATASOURCE_URL
+              value: "$DEV_DB_URL"
+            - name: SPRING_DATASOURCE_USERNAME
+              value: "$DEV_DB_USERNAME"
+            - name: SPRING_DATASOURCE_PASSWORD
+              value: "$DEV_DB_PASSWORD"
