Add: kakao 및 google 요청 URL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,8 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 spring.jwt.secret=12345678901234567890123456789012
 server.error.whitelabel.enabled=false
 
-# validation
+# oauth2
+spring.social.kakao.url.profile=https://kapi.kakao.com/v2/user/me
+spring.social.google.url.profile=https://www.googleapis.com/oauth2/v3/userinfo
 
 
