Delete: properties 파일 삭제, yml 파일 활용

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,13 @@ spring:
     liquibase:
       change-log: classpath:config/liquibase/master.xml
 #        enabled: false
+    social:
+      kakao:
+        url:
+          profile: https://kapi.kakao.com/v2/user/me
+      google:
+        url:
+          profile: https://www.googleapis.com/oauth2/v3/userinfo
 
 
 # logging
