--- a/deployment/deployment-dev.yml
+++ b/deployment/deployment-dev.yml
@@ -7,6 +7,10 @@ spec:
   ports:
     - port: 8081
       targetPort: 8080
+      name: mureng-app-port
+    - port: 10025
+      targetPort: 80
+      name: apache-port
   selector:
     app: mureng-app-dev
 ---
