--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,6 @@ dependencies {
 	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
-	implementation 'org.modelmapper:modelmapper:2.4.2'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
@@ -38,6 +37,8 @@ dependencies {
 	implementation 'org.liquibase:liquibase-core:4.3.5'
 	implementation 'mysql:mysql-connector-java'
 	implementation 'org.springframework.security:spring-security-test'
+	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
 }
 
 test {
