--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ application-oauth.properties
 /deployment/deployment-local.yml
 /.secrets
 
+/mureng-core/src/main/resources/application-dev-local.yml
