--- a/mureng-batch/Dockerfile
+++ b/mureng-batch/Dockerfile
@@ -8,10 +8,10 @@ WORKDIR /home/gradle/project
 # Only download dependencies
 # Eat the expected build failure since no source code has been copied yet
 # RUN gradle clean build --no-daemon > /dev/null 2>&1 || true
-COPY ./mureng-api/build/libs/mureng-api-0.0.1-SNAPSHOT.jar /home/gradle/project
+COPY build/libs/mureng-batch-0.0.1-SNAPSHOT.jar /home/gradle/project
 RUN mkdir /home/gradle/mount
 
 #RUN gradle clean bootJar
 
-ENTRYPOINT ["java","-jar","/home/gradle/project/mureng-api-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java","-jar","/home/gradle/project/mureng-batch-0.0.1-SNAPSHOT.jar"]
 EXPOSE 8080
