--- a/mureng-core/src/main/resources/application-dev.yml
+++ b/mureng-core/src/main/resources/application-dev.yml
@@ -10,6 +10,9 @@ spring:
     jwt:
       secret: 12345678901234567890123456789012
 
+    liquibase:
+      enabled: false
+
 # logging
 logging:
     level:
