Fix: Deployment에 firebase 설정 시크릿 추가

--- a/.github/workflows/test-and-deploy-app-prod.yaml
+++ b/.github/workflows/test-and-deploy-app-prod.yaml
@@ -105,6 +105,7 @@ jobs:
           PROD_DB_URL: ${{ secrets.PROD_DB_URL }}
           PROD_DB_USERNAME: ${{ secrets.PROD_DB_USERNAME }}
           PROD_DB_PASSWORD: ${{ secrets.PROD_DB_PASSWORD }}
+          FIREBASE_SERVICE_KEY: ${{ secrets.FIREBASE_SERVICE_KEY }}
         with:
           input: deployment/deployment.yml
           output: deploy.yml
