Fix: 환경변수 파라미터 누락 수정

--- a/.github/workflows/test-and-deploy-dev.yaml
+++ b/.github/workflows/test-and-deploy-dev.yaml
@@ -191,6 +191,7 @@ jobs:
           DEV_DB_URL: ${{ secrets.DEV_DB_URL }}
           DEV_DB_USERNAME: ${{ secrets.DEV_DB_USERNAME }}
           DEV_DB_PASSWORD: ${{ secrets.DEV_DB_PASSWORD }}
+          FIREBASE_SERVICE_KEY: ${{ secrets.FIREBASE_SERVICE_KEY }}
           DEV_STATIC_DATA_PATH: ${{ secrets.DEV_STATIC_DATA_PATH }}
         with:
           input: deployment/deployment-batch-dev.yml
