Fix: TimeZone 관련 이슈 수정, PROD 환경 SPRING_JWT_SECRET 별도 입력

--- a/deployment/deployment-batch.yml
+++ b/deployment/deployment-batch.yml
@@ -41,6 +41,8 @@ spec:
               value: "$PROD_DB_PASSWORD"
             - name: FIREBASE_SERVICE_KEY
               value: "$FIREBASE_SERVICE_KEY"
+            - name: SPRING_JWT_SECRET
+              value: "$SPRING_JWT_SECRET"
       volumes:
         - name: content-server-volume
           persistentVolumeClaim:
