--- a/.github/workflows/test-and-deploy-batch-prod.yaml
+++ b/.github/workflows/test-and-deploy-batch-prod.yaml
@@ -106,6 +106,7 @@ jobs:
           PROD_DB_USERNAME: ${{ secrets.PROD_DB_USERNAME }}
           PROD_DB_PASSWORD: ${{ secrets.PROD_DB_PASSWORD }}
           FIREBASE_SERVICE_KEY: ${{ secrets.FIREBASE_SERVICE_KEY }}
+          SPRING_JWT_SECRET: ${{ secrets.SPRING_JWT_SECRET }}
         with:
           input: deployment/deployment-batch.yml
           output: deploy.yml
