Fix: server utf-8 설정

--- a/mureng-core/src/main/resources/application.yml
+++ b/mureng-core/src/main/resources/application.yml
@@ -47,6 +47,12 @@ server:
     whitelabel:
           enabled: false
 
+  servlet:
+    encoding:
+      charset: UTF-8
+      enabled: true
+      force: true
+
 
 # media
 media:
