--- a/.github/workflows/test-and-deploy-batch-prod.yaml
+++ b/.github/workflows/test-and-deploy-batch-prod.yaml
@@ -12,8 +12,8 @@ on:
 
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
-  GKE_CLUSTER: mureng-cluster    # Add your cluster name here.
-  GKE_ZONE: asia-east1-a   # Add your cluster zone here.
+  GKE_CLUSTER: mureng-cluster-k    # Add your cluster name here.
+  GKE_ZONE: asia-northeast3-c   # Add your cluster zone here.
   DEPLOYMENT_NAME: mureng-batch-deployment # Add your deployment name here.
   IMAGE: mureng-batch
 
