fix: minReadySeconds 삭제, readinessProbe 적용

--- a/deployment/deployment-dev.yml
+++ b/deployment/deployment-dev.yml
@@ -4,7 +4,6 @@ metadata:
   name: mureng-app-dev-deployment
 spec:
   replicas: 2
-  minReadySeconds: 20
   selector:
     matchLabels:
       app: mureng-app-dev
@@ -28,6 +27,12 @@ spec:
               mountPath: /home/gradle/mount
           ports:
             - containerPort: 8080
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 8080
+            initialDelaySeconds: 10
+            periodSeconds: 5
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: "dev"
