feat: 요청 및 응답 로깅 추가, 로깅 레벨 조정

--- a/mureng-core/src/main/resources/application.yml
+++ b/mureng-core/src/main/resources/application.yml
@@ -40,6 +40,9 @@ logging:
                 type:
                   descriptor:
                           sql: trace
+        net:
+          mureng:
+            info
 
 # server
 server:
