--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,7 @@ project(':mureng-batch') {
 
 		implementation 'org.springframework.boot:spring-boot-starter-quartz'
 		implementation 'org.springframework.boot:spring-boot-starter-batch'
+		implementation 'com.mchange:c3p0'
 		testImplementation 'org.springframework.batch:spring-batch-test'
 	}
 }
