feat: 출석체크 로직 추가 및 관련 테스트 추가 인터셉터를 활용해서 하루에 한 번, 출석체크를 진행할 수 있도록 했다.

--- a/.github/workflows/gradle-test.yml
+++ b/.github/workflows/gradle-test.yml
@@ -30,4 +30,4 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-gradle-
     - name: Gradle 테스트
-      run: ./gradlew build test
+      run: ./gradlew test -Dfile.encoding=UTF-8 --info
