--- a/build.gradle
+++ b/build.gradle
@@ -109,3 +109,9 @@ task dbMigration {
 		}
 	}
 }
+
+compileJava.options.encoding = 'UTF-8'
+
+tasks.withType(JavaCompile) {
+	options.encoding = 'UTF-8'
+}
