--- a/.github/workflows/test-and-deploy-app-prod.yaml
+++ b/.github/workflows/test-and-deploy-app-prod.yaml
@@ -41,7 +41,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
       - name: Gradle 테스트 및 실행파일 생성
-        run: ./gradlew :mureng-api:build :mureng-api:test :mureng-api:bootJar
+        run: ./gradlew :mureng-api:build :mureng-api:test :mureng-api:bootJar -Dfile.encoding=UTF-8 --info
 
       - uses: actions/upload-artifact@v2
         name: 생성한 파일 업로드
