fix: workflow 인자 수정

--- a/.github/workflows/gradle-test.yml
+++ b/.github/workflows/gradle-test.yml
@@ -30,4 +30,4 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-gradle-
     - name: Gradle 테스트
-      run: ./gradlew test -Dfile.encoding=UTF-8 --info
+      run: ./gradlew test -Dfile.encoding=UTF-8 -Duser.timezone=Asia/Seoul --info
