--- a/build.gradle
+++ b/build.gradle
@@ -96,6 +96,7 @@ project(':mureng-api') {
 		compile project(":mureng-core")
 		testCompile project(':mureng-core').sourceSets.test.output
 
+		implementation 'org.springframework.cloud:spring-cloud-aws-context:2.2.1.RELEASE'
 		implementation 'org.springframework.boot:spring-boot-starter-web'
 		implementation 'io.springfox:springfox-swagger2:2.9.2'
 		implementation 'io.springfox:springfox-swagger-ui:2.9.2'
