Add: logback 에 aws cloudwatch로 로그 전송 로직 추가

--- a/deployment/deployment-batch.yml
+++ b/deployment/deployment-batch.yml
@@ -43,6 +43,10 @@ spec:
               value: "$FIREBASE_SERVICE_KEY"
             - name: SPRING_JWT_SECRET
               value: "$SPRING_JWT_SECRET"
+            - name: AWS_ACCESS_KEY
+              value: "$CLOUD_AWS_CREDENTIALS_ACCESS_KEY"
+            - name: AWS_SECRET_KEY
+              value: "$CLOUD_AWS_CREDENTIALS_SECRET_KEY"
       volumes:
         - name: content-server-volume
           persistentVolumeClaim:
