--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,7 @@ subprojects {
 		annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
 		implementation 'org.liquibase:liquibase-core:4.3.5'
 		implementation 'com.google.firebase:firebase-admin:6.8.1'
+		implementation 'ca.pjer:logback-awslogs-appender:1.4.0'
 	}
 
 	test {
