--- a/.github/workflows/test-and-deploy-batch.yaml
+++ b/.github/workflows/test-and-deploy-batch.yaml
@@ -11,9 +11,7 @@ on:
         description: 'Test scenario tags'
 
 env:
-  PROJECT_ID: ${{ secrets.GKE_PROJECT }}
-  GKE_CLUSTER: mureng-cluster-k    # Add your cluster name here.
-  GKE_ZONE: asia-northeast3-c   # Add your cluster zone here.
+  JAR_NAME: mureng-batch-0.0.1-SNAPSHOT.jar
   DEPLOYMENT_NAME: mureng-batch-deployment # Add your deployment name here.
   IMAGE: mureng-batch
 
@@ -47,7 +45,7 @@ jobs:
         name: 생성한 파일 업로드
         with:
           name: mureng-app-artifact
-          path: ${{ github.workspace }}/mureng-batch/build/libs/mureng-batch-0.0.1-SNAPSHOT.jar
+          path: ${{ github.workspace }}/mureng-batch/build/libs/${{ env.JAR_NAME }}
   deployment-batch:
     name: Setup, Build, Publish, and Deploy
     needs: test
@@ -65,38 +63,50 @@ jobs:
         run: |
           mkdir mureng-batch/build
           mkdir mureng-batch/build/libs
-          mv mureng-batch-0.0.1-SNAPSHOT.jar mureng-batch/build/libs/
+          mv ${{ env.JAR_NAME }} mureng-batch/build/libs/
 
-      # Setup gcloud CLI
-      - uses: google-github-actions/setup-gcloud@v0.2.0
+      - name: SHA 업데이트
+        run: echo $GITHUB_SHA > $GITHUB_WORKSPACE/_meta
+
+      - name: 이미지 태그 준비
+        id: get-tag
+        run: |
+          tag=$(echo $GITHUB_SHA | head -c7)
+          echo "::set-output name=tag::$tag"
+
+      - name: 도커 캐싱 준비
+        uses: docker/setup-buildx-action@v1
+
+      - name: 도커 레이어 캐싱
+        uses: actions/cache@v2
         with:
-          service_account_key: ${{ secrets.GKE_SA_KEY }}
-          project_id: ${{ secrets.GKE_PROJECT }}
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
 
-      # Configure docker to use the gcloud command-line tool as a credential helper
-      - run: |-
-          gcloud --quiet auth configure-docker
+      - name: 도커 로그인
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
 
-      # Get the GKE credentials so we can deploy to the cluster
-      - uses: google-github-actions/get-gke-credentials@v0.2.1
+      - name: 컨테이너 이미지 빌드 및 이미지 푸쉬
+        uses: docker/build-push-action@v2
         with:
-          cluster_name: ${{ env.GKE_CLUSTER }}
-          location: ${{ env.GKE_ZONE }}
-          credentials: ${{ secrets.GKE_SA_KEY }}
+          context: ./mureng-batch/
+          push: true
+          tags: docker.io/${{ secrets.DOCKER_USERNAME }}/${{ env.DEPLOYMENT_NAME }}:${{ steps.get-tag.outputs.tag }}
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new
 
-      # Build the Docker image
-      - name: Build
-        run: |-
-          docker build \
-            --tag "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA" \
-            --build-arg GITHUB_SHA="$GITHUB_SHA" \
-            --build-arg GITHUB_REF="$GITHUB_REF" \
-            ./mureng-batch/
+      - name: 캐시 삭제
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
-      # Push the Docker image to Google Container Registry
-      - name: Publish
-        run: |-
-          docker push "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA"
+      - name: 배포파일 업데이트
+        run: TAG=${{ steps.get-tag.outputs.tag }} && sed -i 's|<IMAGE>|docker.io/${{ secrets.DOCKER_USERNAME }}/${{ env.DEPLOYMENT_NAME }}:'${TAG}'|' $GITHUB_WORKSPACE/deployment/deployment-batch.yml
 
       - name: 환경변수 치환 후 최종 배포 파일 생성
         uses: danielr1996/envsubst-action@1.0.0
@@ -107,23 +117,26 @@ jobs:
           SPRING_DATASOURCE_PASSWORD: ${{ secrets.SPRING_DATASOURCE_PASSWORD }}
           FIREBASE_SERVICE_KEY: ${{ secrets.FIREBASE_SERVICE_KEY }}
           SPRING_JWT_SECRET: ${{ secrets.SPRING_JWT_SECRET }}
+          CLOUD_AWS_CREDENTIALS_ACCESS_KEY: ${{ secrets.CLOUD_AWS_CREDENTIALS_ACCESS_KEY }}
+          CLOUD_AWS_CREDENTIALS_SECRET_KEY: ${{ secrets.CLOUD_AWS_CREDENTIALS_SECRET_KEY }}
+          CLOUD_AWS_S3_BUCKET: ${{ secrets.CLOUD_AWS_S3_BUCKET }}
         with:
           input: deployment/deployment-batch.yml
           output: deploy.yml
 
-      # Set up kustomize
-      - name: Set up Kustomize
-        run: |-
-          curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
-          chmod u+x ./kustomize
+      - name: 클러스터에 배포
+        uses: NaLDo627/kubectl@master
+        env:
+          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
+        with:
+          args: apply -f deploy.yml
 
-      # Deploy the Docker image to the GKE cluster
-      - name: Deploy
-        run: |-
-          ./kustomize edit set image gcr.io/PROJECT_ID/IMAGE:TAG=gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA
-          ./kustomize build . | kubectl apply -f -
-          kubectl rollout status deployment/$DEPLOYMENT_NAME
-          kubectl get services -o wide
+      - name: 배포 확인
+        uses: NaLDo627/kubectl@master
+        env:
+          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
+        with:
+          args: '"rollout status deployment/${{ env.DEPLOYMENT_NAME }}"'
   notification-success:
     name: 슬랙에 성공 알림
     if: success()
